--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ matrix:
             - g++-6
             - valgrind
             - lcov
+	    - libgtest-dev
       env: COMPILER=g++-6
 
 before_install:
@@ -52,7 +53,6 @@ script:
   - mkdir build
   - cd build
   - cmake ${CMAKE_OPTIONS} -DCMAKE_CXX_FLAGS=${CXX_FLAGS} -DCMAKE_CXX_COMPILER=$COMPILER -DCMAKE_BUILD_TYPE=ON -DBUILD_TESTS=ON .. && make
-  - make test
 
 after_success:
     - codecov -t 14941eb5-212f-45d2-8f93-b00e31f7ea8f -X gcov
