try to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,8 @@ before_install:
   - cd /usr/src/gtest
   - sudo cmake CMakeLists.txt
   - sudo make 
+  - sudo cp *.a /usr/lib
+  - cd -
 
 install:
     - sudo pip install codecov
